# seacat-note

./: .gitattributes  .gitignore  BUILD_DMG_MAC.sh  FINAL_README.md  LICENSE  README.md  README_BUILD_DMG.md  README_FULL_BUNDLE.md  README_GITHUB_ACTIONS.md  README_GITHUB_READY.md  README_GITHUB_RELEASE.md  README_RELEASE.md  README_RELEASE_FINAL.md  README_TAURI_PINNED_VERSIONS.md  README_TAURI_VERSION_FIX.md  README_V72.md  README_V76.md  README_V92_FONT_FIX.md  README_V93_CARET_FIX.md  README_V94_TOOLBAR_FOCUS_FIX.md  README_V95_DROPDOWN_FIX.md  README_V96_SELECTION_OFFSETS_FIX.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
branding/: README_BRANDING.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: MindMapEditor.tsx
src/types/: simple-mind-map.d.ts
