
[package]
name = "seacat-note"
version = "0.33.0"
edition = "2021"

[lib]
name = "seacat_note"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
rusqlite = { version = "0.31", features = ["bundled"] }
argon2 = "0.5"
aes-gcm-siv = "0.11"
base64 = "0.22"
rand = "0.8"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
walkdir = "2.5"
tauri-plugin-dialog = "2.0.0"
